# LineUp.Backend/Models/Availability.cs
@@ -29,3 +29,21 @@ public class Availability
     [JsonDoNotSerialize]
     public required Schedule Schedule { get; set; }
 }
+
+public class AvailabilityUpdateDTO //A copy of the Availability class used to transfer data.
+{
+    public int Id { get; set; }
+
+    public DateTime[] AvailabilitySlots { get; set; } = [];
+
+    [MaxLength(64)]
+    public required string UserName { get; set; }
+
+    [MaxLength(256)]
+    public string? UserEmail { get; set; }
+
+    public AvailabilityPreferences? Preferences { get; set; }
+
+    public ICollection<FormQuestionAnswer> FormAnswers { get; set; } =
+        new List<FormQuestionAnswer>();
+}
